[package]
name = "zigbee"
version = "0.1.0-alpha.1"
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
edition = "2018"
rust-version = "1.50"

description = "ZigBee protocol stack in `no-std` based on the [ZigBee specification 22 1.0](https://csa-iot.org/wp-content/uploads/2022/01/docs-05-3474-22-0csg-zigbee-specification-1.pdf)"
documentation = "https://docs.rs/zigbee"
repository = "https://github.com/thebino/zigbee-rs"
readme = "README.md"
keywords = ["zigbee", "208.15.4"]
categories = ["network-programming", "no-std", "embedded"]
license = "MIT OR Apache-2.0"

[features]

[dependencies]
heapless = "0.8.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = { version = "2.0.6", default-features = false }

[dev-dependencies]
hex = "0.4.3"
