[package]
name = "esp-sensor"
version = "0.1.0"
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
edition = "2021"

[[bin]]
name = "esp-zigbee-test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-hal = { version = "0.22.0", default-features = false, features = ["esp32c6"] }
esp-backtrace = { version = "0.14.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.12.0", features = ["esp32c6", "log"] }
log = { version = "0.4.21" }
# zigbee = { path = "../../" }

